# marine-app

./: .gitignore  README.md  docker-compose.yml
marine-be/: .fastapi-env  .flake8  Dockerfile  pyproject.toml
marine-be/alembic/: env.py
marine-be/alembic/versions/: 77c6524f675f_create_vessel_positionn.py
marine-be/app/: config.py  data.py  exceptions.py  main.py
marine-be/app/apis/: api.py
marine-be/app/apis/endpoints/: vessel_position.py
marine-be/app/db/: base.py  session.py
marine-be/app/db/repository/: vessel_position_repository.py
marine-be/app/models/: vessel_position.py
marine-be/app/schemas/: vessel_position.py
marine-be/app/tests/apis/: conftest.py  test_create_vessel_position.py  test_get_vessel_positions.py
marine-be/command/: data-fs-exercise.csv  populate_db.py  populate_db_order_time.py
marine-be/scripts/: format-imports.sh  format.sh  lint.sh  populate_data.sh  populate_ordered_data.sh  project-formating.sh  test.sh
marine-be/tests/apis/: test_create_vessel_position.py
marine-fe/: README.md  package-lock.json  package.json
marine-fe/src/: App.vue  main.js
marine-fe/src/components/: DataTable.vue  HelloWorld.vue
