[tool.poetry]
name = "marine-be"
version = "0.1.0"
description = ""
authors = ["Dimitris Tagkalos <dtagkalos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.80.0"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.971"
flake8 = "^5.0.4"
requests = "^2.28.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
isort = "^5.10.1"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
